--- a/AKchatApp/src/app/story-upload/story-upload.component.html
+++ b/AKchatApp/src/app/story-upload/story-upload.component.html
@@ -10,8 +10,9 @@
                     <div class="d-flex justify-content-center mb-5 ">
                         <div class="user-image d-flex justify-content-center">
                           
-                              <img #galleryimg class="user-image-o" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIo8JvX8GztcxTVf3XPGKaArNJbYMpMKJ3Hg&usqp=CAU" alt="">
+                              <img #galleryimg class="user-image-o" [src]="previews.length > 0 ? previews[0] : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIo8JvX8GztcxTVf3XPGKaArNJbYMpMKJ3Hg&usqp=CAU'" alt="">
                             <input  class="image-input" type="file"  multiple (change)="detectFiles($event) ">
+                            
                           </div>
                     </div>
     
@@ -37,6 +38,9 @@
                 </mat-card>
             </form>
             
+        </div>
+        <div>
+            <img *ngFor="let preview of previews" [src]="preview" class="rounded mb-3 ms-2" width="100" height="80px">
         </div>
         <div>
             <img style="width:100px ;height:80px" *ngFor="let url of urls" [src]="url" class="rounded mb-3 ms-2" width="180">
