--- a/AKchatApp/src/app/story/story.component.css
+++ b/AKchatApp/src/app/story/story.component.css
@@ -2,6 +2,7 @@
     border:0px;
     box-shadow: 3px 3px 13px -3px #888888;
     border-radius: 25px;
+    overflow-y: auto;
 }
 .stitle{
     width: auto; height: 50px;color: white; background-color:rgb(25, 135, 84);; border-radius: 25px 25px 0px 0px;
@@ -19,6 +20,6 @@
     border: 0px;
 }
 
-.custom-dialog-panel .mat-dialog-container {
-    padding: 0 !important;
-  }
+.tr{
+    display: none;
+}
