--- a/AKchatApp/src/app/story/story.component.html
+++ b/AKchatApp/src/app/story/story.component.html
@@ -1,5 +1,5 @@
-<div class="story" style="height:749px;">
-    <div class=" stitle" style=""><p style="font-size: x-large;font-weight: 500;margin: 0px;">Stories</p></div>
+<div class="story mt-2" style="height:600px;">
+    <div class=" stitle" ><p style="font-size: x-large;font-weight: 500;margin: 0px;">Stories</p></div>
     <div class="d-flex align-items-center" style="height:50px;background-color: rgb(238, 238, 238);position: relative;">
     
         <div class="ms-3" style="height: 40px;width: 40px;border-radius: 50%;background-color: brown;"></div>
@@ -14,7 +14,25 @@
         </div>
         <p class="m-0 ms-2" *ngIf="story.uploadedUser !== service.myName">{{story.uploadedUser}}</p>
           </button>
-          <div>{{story.userid}}</div>
+
+          <!-- <ng-container *ngIf="story.uploadedUser !== service.myName">
+          <button style="background-color: red;border: 0px;" class="m-0 b-0 p-0"   (click)="deleteStory(story.userid)"><i class="bi bi-trash3-fill text-primary" ></i></button>
+        </ng-container> -->
+
+
+        
+        <div *ngIf= isMyStory(story.uploadedUser)>
+            <button style="background-color: transparent; border: 0px;" class="m-0 b-0 p-0" (click)="deleteStory(story.userid)">
+              <i class="bi bi-trash3-fill me-1 text-danger"></i>
+            </button>
+        </div>
+          
+
+
+          <!-- <div>{{story.userid}}</div> -->
+          <div>{{service.myName}}</div>
+          <div>{{story.uploadedUser}}</div>
+
           <hr>
         </div>
     </ng-container>
